--- a/style.css
+++ b/style.css
@@ -64,14 +64,10 @@ body {
     justify-content: space-between;
     align-items: center;    
     background-color: #1f1f1fc9;
-    font-size: 16px;
-    padding-right: 8px;
-    padding-left: 8px;
+    font-size: 1rem;
+    padding: 0px 20px;
     border: 2px solid #1f1f1fc9;
     border-radius: 40px;
-    z-index: 1000;
-    top: 0;
-    position: sticky;
 }
 
 .subtitle{
