--- a/style.css
+++ b/style.css
@@ -107,17 +107,12 @@ body {
     cursor: pointer;
 }
 
-#cv_button svg {
-    width: 24px;
-    height: 24px;
-    padding-left: 2px;
-}
-
 #container_aboutme{
     display: flex;
     justify-content: space-around;
     height: 300px;
 }
+
 #aboutme{
     display: flex;
     flex-direction: column;
@@ -177,17 +172,17 @@ body {
 }
 
 #img_aboutme{
-    display: flex;
     flex: 3;
     border: 0;
     border-radius: 0px 16px 16px 0px;
     width: 30vw;
 }
+
 #img_tomas{    
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 25%;
 }
 
 
@@ -266,6 +261,10 @@ form{
     width: 100%;
     display: flex;
     flex-direction: column;
+    color: black;
+}
+
+.form_input{
     color: black;
 }
 
